--- a/CoffeeMapper/MainWindow.xaml
+++ b/CoffeeMapper/MainWindow.xaml
@@ -10,9 +10,9 @@
         TextElement.FontSize="13"
         TextOptions.TextFormattingMode="Ideal" 
         TextOptions.TextRenderingMode="Auto"        
-        Title="CoffeeMapper" Height="720" Width="1280">
+        Title="CoffeeMapper" Height="720" Width="1280" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        <TextBlock x:Name="DriverLabel" FontFamily="Roboto Light" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="80" />
+        <TextBlock x:Name="DriverLabel" FontFamily="Roboto Light" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="80"/>
         <Button x:Name="StartButton" Content="Start" Height="80" Width="200" IsEnabled="False" Click="StartButton_Click"/>
     </Grid>
 </Window>
